latex-cv-lebenslauf updated

--- a/doc/latex/lebenslauf/lebenslauf.tex
+++ b/doc/latex/lebenslauf/lebenslauf.tex
@@ -26,9 +26,9 @@
 %\AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
 
 % personal data
-\firstname{Lebenslauf}
-\familyname{}
-\title{Max Mustermann}
+\firstname{Max}
+\familyname{Mustermann}
+\title{}
 \address{Musterstraße 7}{01010~Musterstadt}
 \mobile{0176\,--\,987654321}
 \phone{01234\,--\,567890}
@@ -66,7 +66,7 @@
 
 \emptysection \closesection
 \vspace*{2mm}
-\hspace*{4mm}\includegraphics[width=90pt]{unterschrift.pdf}
+\hspace*{4mm}\includegraphics[width=130px]{unterschrift.pdf}
 \newline{}
 Musterstadt, den \today
 
