zip-tar; newProjC, e-mail address

--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 Project:  Scripts
 
-Author:   DSIW <dsiw@privatdemail.net>
+Author:   DSIW <dsiw@dsiw-it.net>
 Twitter:  @DSIW
 Diaspora: dsiw@joindiaspora.com
 Jabber:   dsiw@jabme.de
-Blog:     https://dsiw.wordpress.com/
+Blog:     http://blog.dsiw-it.de/
 
 License:  GPLv3
 
