--- a/sys/light/README
+++ b/sys/light/README
@@ -1,6 +1,6 @@
 Installation von light.desktop
 Autor: DSIW
-Blog: dsiw.wordpress.com
+Blog: http://blog.dsiw-it.de/
 Twitter: http://twitter.com/DSIW
 Quelle: http://wp.me/pVnd6-88
 
