changed e-mail address

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Project:  Scripts
 
-Author:   DSIW <dsiw@dsiw-it.net>
+Author:   DSIW <dsiw@dsiw-it.de>
 Twitter:  @DSIW
 Diaspora: dsiw@joindiaspora.com
 Jabber:   dsiw@jabme.de
